Name:                hswtrack
Version:             0.1
Synopsis:            Project to demonstrate the use of snaplet-sqlite-simple
License:             AllRightsReserved
Author:              Janne Hellsten
Maintainer:          Janne Hellsten <jjhellst@gmail.com>
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable hswtrack
  default-language: Haskell2010
  hs-source-dirs: src, src/Site, src/Model
  main-is: Site/Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring,
    containers,
    lens,
    aeson >= 0.7,
    attoparsec,
    mtl >= 2 && < 3,
    snap >= 0.13 && < 0.14,
    snap-core >= 0.9 && < 0.11,
    snap-server >= 0.9 && < 0.11,
    snap-loader-static >= 0.9 && < 0.11,
    snaplet-sqlite-simple >= 0.4 && < 1.0,
    sqlite-simple >= 0.4.5 && < 1.0,
    text >= 0.11 && < 1.2,
    time >= 1.1 && < 1.5,
    old-locale,
    either  >= 3.1,
    errors  >= 1.3 && < 1.5

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9 && < 0.11
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind -fhpc

test-suite resttest
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

  hs-source-dirs: test
  main-is:        Main.hs

  ghc-options:   -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -fhpc

  build-depends: base
               , aeson
               , bytestring
               , containers
               , http-client
               , HUnit
               , lens
               , test-framework
               , test-framework-hunit
               , text
               , time
               , vector
               , wreq
